# omarchist

./: .gitignore  .prettierignore  Cargo.toml  LICENSE  README.md  cliff.toml  justfile  omarchist.desktop  package-lock.json  package.json  update-version  vitest.config.js
.github/: FUNDING.yml
.github/workflows/: release.yml
defaults/: settings.json
defaults/omarchist/: settings.json
defaults/theme/: alacritty.toml  btop.theme  colors.toml  custom_theme.json  hyprland.conf  hyprlock.conf  kitty.conf  mako.ini  neovim.lua  omarchist.json  swayosd.css  vscode.json  walker.css  waybar.css
docs/: .gitignore  cli.md  index.md  package.json  system-monitor.md
docs/.vitepress/: config.mjs
docs/configuring/: hyprland.md  index.md  omarchy.md  status-bar.md  waybar.md
docs/theming/: index.md  sharing.md
src/: app.css  assets.rs  cli.rs  lib.rs  main.rs  shell.rs  system.rs  terminal.rs  types.rs  ui.rs
src-tauri/: Cargo.toml  clippy.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json  shell.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: theme_cache.toml
src-tauri/permissions/autogenerated/: get_community_themes.toml
src-tauri/resources/: settings.json
src-tauri/resources/template/: custom_theme.json  kitty.conf
src-tauri/src/: lib.rs
src-tauri/src/commands/: hyprland.rs  mod.rs  omarchy.rs  settings.rs  shell.rs  theme_sharing.rs  update_config.rs  waybar.rs
src-tauri/src/services/: cli_handler.rs  mod.rs  nvidia_detection.rs  startup_cli.rs
src-tauri/src/services/cache/: cache_config.rs  cache_manager.rs  mod.rs
src-tauri/src/services/config/: light_mode.rs  mod.rs
src-tauri/src/services/config/generators/: alacritty.rs  btop.rs  chromium.rs  ghostty.rs  hyprland.rs  hyprlock.rs  icons.rs  kitty.rs  mako.rs  mod.rs  neovim.rs  swayosd.rs  terminal.rs  vscode.rs  walker.rs  waybar.rs
src-tauri/src/services/hyprland/: keyboard.rs  mod.rs
src-tauri/src/services/import_export/: manifest.rs  mod.rs
src-tauri/src/services/settings/: app_settings.rs  mod.rs
src-tauri/src/services/themes/: color_extraction.rs  community_themes.rs  custom_themes.rs  get_current_theme.rs  get_sys_themes.rs  get_themes.rs  mod.rs  optimized_theme_loader.rs  theme_cache.rs  validator.rs
src-tauri/src/services/waybar/: mod.rs
src-tauri/src/types/: config.rs  errors.rs  hyprland.rs  mod.rs  tests.rs  theme.rs
src/lib/: index.js
src/routes/: +layout.svelte  +page.svelte
src/shell/: omarchy_sh_commands.rs  theme_sh_commands.rs  waybar_sh_commands.rs
src/system/: config.rs  custom_themes.rs  hyprland_config.rs  omarchy.rs  omarchy_version.rs  theme_file_ops.rs  theme_management.rs  themes.rs  ui_theme_watcher.rs  waybar.rs
ui_themes/: theme.json
(+295 files in other folders)
