[package]
name = "omarchist"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { version = "0.2.2" }
gpui-component = "0.5.1"
gpui-component-assets = "0.5.1"
anyhow = "1.0.101"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
smol = "2.0.2"
dirs = "6.0.0"
base64 = "0.22.1"
rust-embed = "8.11.0"
chrono = "0.4.43"
sysinfo = "0.38.1"
battery = "0.7.8"

[target.'cfg(target_os = "macos")'.dependencies]
core-text = "=21.0.0"
