[package]
name = "omarchist"
version = "0.3.0"
edition = "2024"

[dependencies]
gpui = { version = "0.2.2" }
gpui-component = "0.5.1"
gpui-component-assets = "0.5.1"
anyhow = "1.0.101"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
smol = "2.0.2"
dirs = "6.0.0"
base64 = "0.22.1"
rust-embed = "8.11.0"
chrono = "0.4.43"
sysinfo = "0.38.1"
battery = "0.7.8"
rfd = "0.17.2"
isahc = { version = "1.7.2", features = ["json"] }
alacritty_terminal = "0.25"
parking_lot = "0.12.5"
clap = { version = "4.5.58", features = ["derive"] }
image = { version = "0.25.9", features = ["png", "jpeg", "webp"] }
color-thief = "0.2.2"
palette = "0.7.6"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable Link-Time Optimization
codegen-units = 1   # Reduce parallel code generation units
panic = 'abort'     # Abort on panic instead of unwinding
strip = true        # Automatically strip symbols from the binary
