[package]
name = "omarchist"
version = "0.3.1"
description = "A GUI app for Omarchy."
authors = ["tahayvr <taha@noiserandom.com>"]
license = "MIT"
repository = "https://github.com/tahayvr/omarchist-app"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.4", features = [] }
tauri-plugin-log = "2.6"
tauri-plugin-opener = "2.5"
tauri-plugin-dialog = "2.3"
toml = "0.9.2"
dirs = "6.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
regex = "1.11.1"
base64 = "0.22"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros", "time"] }
thiserror = "1.0"

[features]
default = []
test-utils = []

[dev-dependencies]
tempfile = "3.8"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "2"
tauri-plugin-single-instance = "2"
